--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,17 @@
             <classifier>jdk15</classifier>
         </dependency>
 
+        <!-- activeMq -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-activemq</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-pool</artifactId>
+        </dependency>
+
+
     </dependencies>
 
     <build>
