--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.name=root
+spring.datasource.username=root
 spring.datasource.password=Aa123456
-spring.datasource.url=jdbc:mysql://47.103.209.81:3306/classes
-
+spring.datasource.url=jdbc:mysql://47.103.209.81:3306/classes?characterEncoding=utf8&serverTimeZone=UTC
 
