--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=Aa123456
 #39.97.124.177
-spring.datasource.url=jdbc:mysql://39.97.124.177:3306/classes?characterEncoding=utf8&serverTimeZone=UTC
+spring.datasource.url=jdbc:mysql://39.97.124.177:3306/classes?characterEncoding=utf8&serverTimezone=UTC
 #redis连接池
 spring.redis.jedis.pool.min-idle=5
 spring.redis.jedis.pool.max-active=10
@@ -12,8 +12,9 @@ spring.redis.lettuce.pool.max-active=10
 spring.redis.port=6379
 spring.redis.host=47.103.209.81
 spring.redis.password=Aa123456
-spring.redis.timeout=1000
+spring.redis.timeout=5000
 #mongodb数据连接属性
-spring.data.mongodb.uri= mongodb://47.103.209.81
-spring.data.mongodb.database=yapi
+#47.103.209.81
+spring.data.mongodb.uri= mongodb://39.97.124.177
+spring.data.mongodb.database=classes
 #内网穿透 地址 http://hello.shenzhuo.vip:12207/
