--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.username=root
 spring.datasource.password=Aa123456
 #39.97.124.177
 spring.datasource.url=jdbc:mysql://39.97.124.177:3306/classes?characterEncoding=utf8&serverTimezone=UTC
+spring.datasource
 #redis¡¨Ω”≥ÿ
 spring.redis.jedis.pool.min-idle=5
 spring.redis.jedis.pool.max-active=10
